@@ -76,11 +76,13 @@ func WrapMethodNotAllowedHandler(h http.Handler, m mux.MiddlewareFunc) http.Hand
 // Use WithTracer to specify an alternative tracer.
 func Middleware(o ...Option) mux.MiddlewareFunc {
 	opts := options{
-		tracer:         apm.DefaultTracer,
-		requestIgnorer: apmhttp.DefaultServerRequestIgnorer(),
+		tracer: apm.DefaultTracer,
 	}
 	for _, o := range o {
 		o(&opts)
+	}
+	if opts.requestIgnorer == nil {
+		opts.requestIgnorer = apmhttp.NewDynamicServerRequestIgnorer(opts.tracer)
 	}
 	return func(h http.Handler) http.Handler {
 		return apmhttp.Wrap(
