@@ -23,6 +23,8 @@ endif::[]
 
 https://github.com/elastic/apm-agent-go/compare/v1.10.0...master[View commits]
 
+- Make TRANSACTION_IGNORE_URLS dynamically configurable: {pull}872[#872]
+
 
 [[release-notes-1.x]]
 === Go Agent version 1.x
